# indomee

./: README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
indomee/: __init__.py
