[project]
name = "indomee"
version = "0.1.0"
description = "Determine if your retrieved results are in-domain hehe get it?"
readme = "README.md"
authors = [
    { name = "Ivan Leo", email = "ivanleomk@gmail.com" } 
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
